<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_add_student_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_add_student"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutAddStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_add_student_id"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_student_subject">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etStudentId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_save"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutAddStudent"/>

</androidx.constraintlayout.widget.ConstraintLayout>