<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ScheduleFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewAddScheduleHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_header_add_schedule"
        android:textSize="28sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txtInputLayoutSubject"/>

    <ImageView
        android:id="@+id/imgViewAddStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:src="@drawable/ic_baseline_person_add_alt_1_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textViewAddScheduleHeader"
        app:layout_constraintBottom_toTopOf="@+id/txtInputLayoutSubject"
        app:tint="@color/txt_color"
        android:visibility="gone"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_subject"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddScheduleHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutSubDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_subject_desc"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtInputLayoutSubject"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSubDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_date"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtInputLayoutSubDesc"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutStartTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_start_time"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtInputLayoutDate"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etStartTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutEndTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_end_time"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtInputLayoutStartTime"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="60dp"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutEndTime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1">
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateSchedule"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/btn_txt_create_schedule"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtInputLayoutEndTime"
        app:layout_constraintBottom_toTopOf="@+id/btnDeleteSchedule"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDeleteSchedule"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/btn_txt_delete_schedule"
        app:strokeColor="@color/txt_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>