<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:textSize="@dimen/home_subject_text_size"
            android:text="@string/txt_today_clz"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTodayClasses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/wrapper_empty_today_schedules"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/amp_light_gray">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="No data present"
                android:textSize="17sp"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:textSize="@dimen/home_subject_text_size"
            android:text="@string/txt_upcoming_clz"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvUpcomingClasses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/wrapper_empty_upcoming_schedules"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/amp_light_gray">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="No data present"
                android:textSize="17sp"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="76dp"
        android:src="@drawable/ic_baseline_add_24"
        app:tint="@color/white"
        app:backgroundTint="@color/cardview_dark_background"
        app:fabSize="normal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/btn_txt_add" />

</androidx.constraintlayout.widget.ConstraintLayout>