<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/close"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:padding="14dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:visibility="visible"
            app:tint="@color/txt_color" />

        <TextView
            android:id="@+id/title_student_select"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="@string/txt_select_students"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/txt_save"
            android:visibility="visible" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_separator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:visibility="visible"
        android:gravity="center"
        android:weightSum="1">

        <ImageView
            android:id="@+id/fa_search_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|start"
            android:paddingStart="12dp"
            android:paddingEnd="0dp"
            android:src="@drawable/ic_baseline_search_24" />

        <EditText
            android:id="@+id/student_search"
            style="@style/textInputText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/txt_search_students"
            android:paddingStart="12dp"
            android:paddingEnd="0dp"
            android:selectAllOnFocus="true"
            android:focusable="false"
            android:singleLine="true" />

        <Button
            android:id="@+id/search_close"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/ic_baseline_close_24"
            android:visibility="gone"
            android:gravity="center|end" />

        <SearchView
            android:id="@+id/search_view_students"
            style="@style/SearchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:queryHint="@string/txt_search_students"
            android:visibility="gone" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_separator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:layout_marginHorizontal="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_students"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>